--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
         <meta charset="UTF-8">
         <title>Bienvenido a Ticknet :: El mejor lugar para vender sus entradas</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="content-type" content="application/vnd.ms-excel; charset=UTF-8">
         @Styles.Render("~/Content/css")<!--boostrap-->
         @Styles.Render("~/Content/themes/base/css")<!--jquery UI -->
         <link rel="stylesheet" href="~/Content/estilos-index2.css">
@@ -208,6 +209,7 @@ else
     <head>
         <meta charset="UTF-8">
         <title>@ViewBag.Title</title>
+        <meta http-equiv="content-type" content="application/vnd.ms-excel; charset=UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         @Styles.Render("~/Content/css")<!--boostrap-->
         @Styles.Render("~/Content/themes/base/css")<!--jquery UI -->
