--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
@@ -25,6 +25,7 @@
     <div class="col-md-5">
         <ol class="breadcrumb">
             <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
+            <li><a href="@Url.Action("MiCuenta","CuentaUsuario")">Mi cuenta</a></li>
             <li class="active">Carrito de compras</li>
         </ol>
     </div>
