--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
@@ -8,6 +8,7 @@
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
+            <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
             <li>@Html.ActionLink("Mi Cuenta", "MiCuenta", "CuentaUsuario")
             <li class="active">Modificar Datos</li>
         </ol>
