--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
@@ -32,8 +32,9 @@
     td{cursor:text}
 </style>
 <div class="container-fluid">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <ol class="breadcrumb">
+            <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
             <li><a href="@Url.Action("MiCuenta", "CuentaUsuario")">Mi cuenta</a></li>
             <li class="active">Mis reservas vigentes</li>
         </ol>
