--- a/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
+++ b/WebApplication4/WebApplication4/Views/Manage/ChangePassword.cshtml
@@ -4,10 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container-fluid">
-    <div class="col-md-3">
+    <div class="col-md-5">
         <ol class="breadcrumb">
+            <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
             <li>@Html.ActionLink("Mi Cuenta", "MiCuenta", "CuentaUsuario")</li>
-            <li class="active">Cambiar Contrasena</li>
+            <li class="active">Cambiar contraseña</li>
         </ol>
     </div>
 </div>
