--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteCliente.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteCliente.cshtml
@@ -73,7 +73,7 @@
                                     <td>@row.nombre   @row.apellido</td>
                                     <td class="c">@row.codDoc</td>
                                     <td class="c">@listaA.Count</td>
-                                    <td class="r">@row.puntos</td>
+                                    <td>@row.puntos</td>
                                 </tr>
                             }
                         </tbody>
