--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
@@ -57,14 +57,14 @@
         <div class="col-md-8">
             <div class="row">
                 <div class="col-md-12" id="listaEventoPromocion">
-                    <p>Mejores descuentos para su compra segun los items en su carrito:</p>
+                    <p>Mejores descuentos para su compra según los items en su carrito:</p>
                     @{
                         for (int i = 0; i < promocionesLista.Count; i++)
                         {
                             string razon = "";
                             if (promocionesLista[i].codPromo == -1)
                             {
-                                razon = "- No cuenta con promocion";
+                                razon = "- No cuenta con promoción alguna";
                             }
                             else
                             {
@@ -76,14 +76,16 @@
                             <p style="margin-left:2em">@razon</p>
                         }
                     }
-                </div>
+                </div>                
+            </div><br />
+            <div class="row">
                 <div class="col-md-12" id="tarjeta">
-                    <h3>Información de la tarjeta</h3><br />
+                    <h3><span class="fa fa-user"></span> Datos del comprador</h3><br />
                     @using (Html.BeginForm("ComprarEntrada", "CuentaUsuario", FormMethod.Post, new { @id = "formPost" }))
                     {
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.Nombre, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.Nombre, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @{//si esque es un usuario registrado
                         if (Request.IsAuthenticated)
                         {
@@ -96,10 +98,10 @@
                         }
                                 }
                             </div>
-                        </div>
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.Dni, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        </div><br>
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.Dni, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @{//si esque es un usuario regitrado
                         if (Request.IsAuthenticated)
                         {
@@ -112,80 +114,81 @@
                         }
                                 }
                             </div>
-                        </div>
-
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.idBanco, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        </div><br />
+                        <h3><span class="fa fa-credit-card "></span> Información de la tarjeta</h3><br />
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.idBanco, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.DropDownListFor(c => c.idBanco, ViewBag.Bancos as SelectList, new { @class = "form-control", @onchange = "calculaPromo()" })
                                 @Html.ValidationMessageFor(c => c.idBanco)
                             </div>
-                        </div>
+                        </div><br />
 
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.idTipoTarjeta, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.idTipoTarjeta, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.DropDownListFor(c => c.idTipoTarjeta, ViewBag.TipoTarjeta as SelectList, new { @class = "form-control", @onchange = "calculaPromo()" })
                                 @Html.ValidationMessageFor(c => c.idTipoTarjeta)
                             </div>
-                        </div>
+                        </div><br />
 
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.NumeroTarjeta, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.NumeroTarjeta, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.TextBoxFor(c => c.NumeroTarjeta, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(c => c.NumeroTarjeta)
                             </div>
+                        </div><br />
 
-                        </div>
-
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.CodCcv, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.CodCcv, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.TextBoxFor(c => c.CodCcv, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(c => c.CodCcv)
                             </div>
-                        </div>
+                        </div><br />
 
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.Mes, new { @class = "control-label col-md-2" })
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.Mes, new { @class = "control-label col-md-5" })
                             <div class="col-md-2">
                                 @Html.DropDownListFor(c => c.Mes, ViewBag.Mes as List<SelectListItem>, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(c => c.Mes)
                             </div>
-                            @Html.LabelFor(c => c.AnioVen, new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(c => c.AnioVen, new { @class = "control-label col-md-1" })
                             <div class="col-md-2">
                                 @Html.DropDownListFor(c => c.AnioVen, ViewBag.AnVen as List<SelectListItem>, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(c => c.AnioVen)
                             </div>
-                        </div>
+                        </div><br />
 
-                        <h3>Información de montos</h3><br>
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.Importe, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <h3><span class="fa fa-money"></span> Montos y dsctos.</h3><br>
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.Importe, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.TextBoxFor(c => c.Importe, new { @class = "form-control", @Value = importe, @readonly = "readonly" })
                             </div>
-                        </div>
+                        </div><br />
 
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.TextBoxFor(c => c.Descuento, new { @class = "form-control", @Value = descuento, @readonly = "readonly" })
                             </div>
-                        </div>
+                        </div><br />
 
-                        <div class="row form-group">
-                            @Html.LabelFor(c => c.MontoPagar, new { @class = "control-label col-md-3" })
-                            <div class="col-md-4">
+                        <div class="row form-horizontal">
+                            @Html.LabelFor(c => c.MontoPagar, new { @class = "control-label col-md-5" })
+                            <div class="col-md-5">
                                 @Html.TextBoxFor(c => c.MontoPagar, new { @class = "form-control", @Value = montopagar, @readonly = "readonly" })
                             </div>
-                        </div>
+                        </div><br />
                         <div class="row">
-                            <div class="col-md-6 col-sm-6 col-xs-6">
-                                <input type="submit" value="Finalizar Compra" onclick="llenaArreglo()" class="btn btn-default btn-primary" />
-                            </div>
-                        </div>
+                            <div class="row form-horizontal">                                                                
+                                <div class="col-md-5 col-md-offset-5 col-sm-5 col-sm-offset-5 col-xs-5 col-xs-offset-5">
+                                    <button type="submit" onclick="llenaArreglo()" class="btn btn-default btn-primary"><span class="fa fa-usd fa-lg"></span> Finalizar la compra</button>
+                                </div>
+                            </div>                            
+                        </div><br />
                     }
                 </div>
             </div>
@@ -194,7 +197,7 @@
         <div class="col-md-4">
             destacados
         </div>
-    </div>
+    </div><br />
 </div>
 
 
