--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
@@ -47,8 +47,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row form-group">
-                            <div class="col-md-12">
-                                <a class="btn btn-danger pull-right" onclick="quitarCarrito()">Quitar  <span class="glyphicon glyphicon-trash"></span></a>
+                            <div class="col-md-10 col-sm-8 col-xs-6">
+                                <a class="btn btn-success pull-right" href="@Url.Action("ComprarEntrada", "CuentaUsuario")"><span class="glyphicon glyphicon-usd"></span> Pagar entradas</a>
+                            </div>
+                            <div class="col-md-2 col-sm-4 col-xs-6">
+                                <a class="btn btn-danger pull-right" onclick="quitarCarrito()"><span class="glyphicon glyphicon-trash"></span> Quitar</a>
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -106,16 +109,11 @@
                             </table>
                         </div>
                         <div class="row form-group">
-                            <div id="filaTotal" class="col-xs-offset-8 col-xs-4 col-sm-offset-8 col-sm-4 col-md-offset-10 col-md-2">
+                            <div id="filaTotal" class="col-xs-offset-8 col-xs-4 col-sm-offset-8 col-sm-4 col-md-offset-9 col-md-3">
                                 <label for="Total" class="pull-left">Total (S/.)</label>
                                 <label id="totalCompra" class="">@(total)</label>
                             </div>
-                        </div>
-                        <div class="row form-group">
-                            <div class="col-md-12">
-                                <a class="btn btn-success pull-right" href="@Url.Action("ComprarEntrada", "CuentaUsuario")"><span class="glyphicon glyphicon-usd"></span> Comprar</a>
-                            </div>
-                        </div>
+                        </div>                        
                     </div>
                 </div>
 
