--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -208,7 +208,7 @@ else
     <html>
     <head>
         <meta charset="UTF-8">
-        <title>@ViewBag.Title</title>
+        <title>Ticknet :: El mejor lugar para comprar tus entradas</title>
         <meta http-equiv="content-type" content="application/vnd.ms-excel; charset=UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         @Styles.Render("~/Content/css")<!--boostrap-->
